<resources>
    <string name="app_name">Medfield.TV</string>

    <string name="title_section1">TV Guide</string>
    <string name="title_section2">Online Videos</string>
    <string name="title_section3">Social Feed</string>
    <string name="title_section4">Requests/Contact Us</string>
    <string name="title_section5">About</string>
    <string name="title_section6">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Try This!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">IntroActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="description">Medfield.TV provides local community television for the residents of Medfield MA. Medfield.TV\'s goal is to be a valuable community resource.</string>

    <string name="tvguidetitle">TV Guide</string>
    <string name="tvguide">The most up to date guide on what is playing and what will be playing on all three channels:</string>
    <string name="channelpublic">Public</string>
    <string name="education">Education</string>
    <string name="gov">Government</string>

    <string name="onlinevidtitle">Online Video</string>
    <string name="onlinevideo">Watch any of Medfield.TV\'s online content, including:</string>
    <string name="sports">Sports</string>
    <string name="lshows">Local Shows</string>
    <string name="Townmeetings">Town Meetings</string>
    <string name="more">and much more</string>

    <string name="andmoretitle">And More</string>
    <string name="andmore">Get involved, find info, request DVDs, and follow Medfield.TV\'s newsfeed.</string>

    <string name="network">Choose a network</string>

    <string name="preference_file_key">com.binitshah.networkprovider</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_detail">ShowDetailActivity</string>
    <string name="title_activity_youtube_video">YoutubeVideoActivity</string>
</resources>
