<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.binitshah.medfieldtv.Intro_2"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvimage"
        android:layout_gravity="center_horizontal"
        android:paddingTop="25dp"
        android:src="@drawable/tv" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/title2"
        android:text="@string/tvguidetitle"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/greyText"
        android:paddingTop="15dp"
        android:paddingLeft="40dp"
        android:textIsSelectable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvguide"
        android:id="@+id/descrip2"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="40dp"
        android:textSize="22sp"
        android:paddingRight="40dp"
        android:textIsSelectable="false"
        android:textColor="@color/greyText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channelpublic"
        android:id="@+id/channel1"
        android:textSize="22sp"
        android:textColor="@color/greyText"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:id="@+id/channel2"
        android:textSize="22sp"
        android:textColor="@color/greyText"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gov"
        android:id="@+id/channel3"
        android:textSize="22sp"
        android:textColor="@color/greyText"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
